<resources>
    <string name="app_name">Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="a5dp">5dp</string>
    <string name="a10dp">10dp</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="a20dp">20dp</string>
    <string name="msgapl">You have not yet applied for EMI Financing.Apply now to get access to a
        selction of fast,new laptops and upgrade your student life!
    </string>
    <string name="title_activity_login_with_otp">Login_with_otp</string>
    <string name="title_activity_splash">Splash</string>
    <string name="facebook_app_id">926872150723069</string>
    <string name="Rs">\u20B9</string>
    <string name="hint1">
        <i>Enter OTP</i>
    </string>
    <string name="fblogin">Connect your account</string>
    <string name="crashed_report">An error occurred.</string>
    <string name="web">http://54.169.128.156:7777/</string>
    <string name="title_activity_facebook_auth">FacebookAuth</string>
    <string name="h2">
        <i>Phone Number</i>
    </string>
    <string name="buddyagent">
        <i>2131296332</i>
    </string>
    <string name="h3">
        <i>Password</i>
    </string>
    <string name="h4">
        <i>Name</i>
    </string>
    <string name="h5">
        <i>Email</i>
    </string>
    <string name="h6">
        <i>Phone</i>
    </string>
    <string name="h7">
        <i>Referral Code</i>
    </string>
    <string name="h8">
        <i>New Password</i>
    </string>
    <string name="h9">
        <i>Re-enter new Password</i>
    </string>
    <string name="title_activity_profile_form_step1">ProfileFormStep1</string>
    <string name="title_choose_image">Choose an Image</string>
    <string-array name="aadhar_or_pan">
        <item>Aadhar Number</item>
        <item>PAN</item>
    </string-array>
    <string-array name="address_proof_type">
        <item>Aadhaar Card</item>
        <item>Driving License</item>
        <item>Voter ID</item>
        <item>Passport</item>
        <item>Ration Card</item>
    </string-array>
    <string-array name="places_of_stay">
        <item>Rented/PG Accommodation</item>
        <item>With Parents</item>
        <item>College hostel</item>
        <item>Select an option</item>
    </string-array>
    <string-array name="places_of_stay_values">
        <item>pg</item>
        <item>parents</item>
        <item>hostel</item>
    </string-array>
    <string-array name="gpa_type">
        <item>Select an option</item>
        <item>percentage</item>
        <item>GPA5</item>
        <item>GPA</item>
    </string-array>
    <string-array name="gpa_values">
        <item>Select an option</item>
        <item>Percentage</item>
        <item>GPA out of 5</item>
        <item>GPA out of 10</item>
    </string-array>
    <string-array name="vehicles_type">
        <item>2 wheeler</item>
        <item>4 wheeler</item>
        <item>Select an option</item>
    </string-array>
    <string-array name="monthly_expenditure">
        <item>Below Rs 2,500</item>
        <item>Rs.2,500&#45;5,000</item>
        <item>Rs.5,000&#45;10,000</item>
        <item>Rs.10,000 &amp; above</item>
        <item>Select range</item>
    </string-array>
    <string-array name="monthly_expenditure_values">
        <item>2500</item>
        <item>2500&#45;5000</item>
        <item>5000&#45;10000</item>
        <item>10000</item>
    </string-array>
    <string-array name="annual_fees">
        <item>Below Rs. 10,000</item>
        <item>Rs.10,000&#45;25,000</item>
        <item>Rs.25,000&#45;50,000</item>
        <item>Rs.50,000&#45;100,000</item>
        <item>Rs.100,000&#45;150,000</item>
        <item>Rs.150,000 &amp; above</item>
        <item>Select range</item>
    </string-array>
    <string-array name="annual_fees_values">
        <item>10000</item>
        <item>10000&#45;25000</item>
        <item>25000&#45;50000</item>
        <item>50000&#45;100000</item>
        <item>100000&#45;150000</item>
        <item>150000</item>
    </string-array>
    <string-array name="language_array">
        <item>English</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Malayalam</item>
        <item>Marathi</item>
        <item>Select a language</item>
    </string-array>
    <string-array name="gender">
        <item>guy</item>
        <item>girl</item>
        <item>Select gender</item>
    </string-array>
    <string-array name="scholarship">
        <item>No</item>
        <item>Yes</item>
        <item>Select</item>
    </string-array>
    <string-array name="scholarship_values">
        <item>false</item>
        <item>true</item>
    </string-array>
    <string-array name="scholarship_type">
        <item>Merit Scholarship</item>
        <item>Need based Scholarship</item>
        <item>Athletic Scholarship</item>
        <item>Ethnic/Minority Scholarship</item>
        <item>Multiple Scholarship</item>
        <item>Select scholarship type</item>
    </string-array>
    <string-array name="family_member">
        <item>Father</item>
        <item>Mother</item>
        <item>Select a family member</item>
    </string-array>
    <string-array name="profession_family_member">
        <item>Government Employee</item>
        <item>Public Servant</item>
        <item>Businessman/Businesswoman</item>
        <item>Self Employed Professional</item>
        <item>Retiree</item>
        <item>Homemaker</item>
        <item>Freelancer</item>
        <item>Contractor</item>
        <item>Private Employee</item>
        <item>Other</item>
        <item>select profession</item>
    </string-array>
    <string name="cashback">Invite your friends to Buddy and earn Rs.150 Cashback for every friend that signs up with your code</string>
    <string name="payment_cashback">There more!Earn Rs.20 in Paytm Cash everytime an invited friend submits their profile for verification!</string>
    <string name="verifyEarnings">View your Earnings</string>
    <string name="invite_friends">Invite friends via Email/SMS</string>
</resources>