<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl1"
        android:padding="@string/a10dp">



        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/images"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:layout_marginLeft="@string/a20dp"
            android:layout_marginTop="@string/a10dp"
            android:layout_toRightOf="@id/profile_image"
            android:text="Aniket Verma"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:layout_toRightOf="@id/profile_image"
            android:layout_marginLeft="@string/a20dp"
            android:layout_below="@id/name"
            android:text="aniket1259.11@bitmesra.ac.in"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Update Application Form"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:id="@+id/view"
            android:layout_below="@id/email"
            android:layout_marginLeft="@string/a20dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="@string/a10dp"
            android:paddingBottom="@string/a10dp"
            android:layout_toRightOf="@id/profile_image"
            android:layout_marginTop="@string/a10dp"
            android:layout_centerInParent="true"

            />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/applymsg"
        android:layout_below="@id/rl1"
        android:layout_marginTop="@string/a20dp"
        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="Rs.50,000 Approved"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/applymsg2"
        android:layout_below="@id/applymsg"
        android:layout_marginLeft="@string/a10dp"

        android:padding="@string/a5dp"
        android:text="Rs.50,000 Used"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/applymsg3"
        android:layout_below="@id/applymsg2"
        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="Rs.50,000 Available"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/view_orders"

        android:layout_alignParentRight="true"
        android:layout_below="@id/rl1"
        android:layout_marginTop="@string/a20dp"

        android:layout_marginRight="@string/a10dp"
        android:paddingTop="@string/a5dp"
android:paddingBottom="@string/a5dp"
        android:paddingLeft="@string/a10dp"
        android:paddingRight="@string/a10dp"
        android:text="View Orders"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/you"
        android:layout_below="@id/applymsg3"
        android:layout_marginTop="@string/a20dp"
        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="You currently owe us"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/youm"
        android:layout_below="@id/you"

        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="Rs.25,000"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/floan"
        android:layout_below="@id/applymsg3"
        android:layout_marginTop="@string/a20dp"
        android:layout_marginLeft="@string/a10dp"
        android:layout_marginRight="@string/a10dp"
        android:paddingTop="@string/a5dp"
        android:paddingBottom="@string/a5dp"
        android:paddingLeft="@string/a10dp"
        android:paddingRight="@string/a10dp"
        android:layout_alignParentRight="true"
        android:text="Foreclose Loan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emiplan"
        android:layout_below="@id/youm"
        android:layout_marginTop="@string/a20dp"
        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="EMI Plan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emiplanm"
        android:layout_below="@id/emiplan"

        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="Rs.4775 per month"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emiplanmt"
        android:layout_below="@id/emiplanm"

        android:layout_marginLeft="@string/a10dp"
        android:padding="@string/a5dp"
        android:text="X 6 months"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modify"
        android:layout_below="@id/youm"
        android:layout_marginTop="@string/a20dp"
        android:layout_marginLeft="@string/a10dp"
        android:layout_marginRight="@string/a10dp"
        android:paddingTop="@string/a5dp"
        android:paddingBottom="@string/a5dp"
        android:paddingLeft="@string/a10dp"
        android:paddingRight="@string/a10dp"
        android:layout_alignParentRight="true"
        android:text="Modify Loan"/>


</RelativeLayout>
